<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="227dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-49dp"
        tools:layout_editor_absoluteY="-189dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblCurrentDateTime"
                android:layout_width="99dp"
                android:layout_height="40dp"
                android:text="@string/lblCurrentDateTimeText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblKwh"
                android:layout_width="69dp"
                android:layout_height="40dp"
                android:text="@string/lblKwhText" />

            <EditText
                android:id="@+id/txtKwh"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:numeric="decimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTotalDistance"
                android:layout_width="69dp"
                android:layout_height="40dp"
                android:text="@string/lblTotalDistanceText" />

            <EditText
                android:id="@+id/txtTotalDistance"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:numeric="decimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblPercentage"
                android:layout_width="69dp"
                android:layout_height="40dp"
                android:text="@string/lblPercentText" />

            <EditText
                android:id="@+id/txtPercentage"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:numeric="integer" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblIsStartRecord"
                android:layout_width="69dp"
                android:layout_height="40dp"
                android:text="@string/lblIsStartRecordText" />

            <CheckBox
                android:id="@+id/chkIsStartRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>